--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
         <!--TESTCONTAINERS-->
         <dependency>
             <groupId>org.testcontainers</groupId>
