--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,9 @@ spring:
   data:
     mongodb:
       uri: mongodb://admin:admin@localhost:27017/joboffers
+offer:
+  http:
+    client:
+      config:
+        uri: http://ec2-3-120-147-150.eu-central-1.compute.amazonaws.com:5057/offers
+        port: 5057
