--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,7 @@ offer:
   http:
     client:
       config:
+        connectTimeout: 5000
+        readTimeout: 5000
         uri: http://ec2-3-120-147-150.eu-central-1.compute.amazonaws.com:5057/offers
         port: 5057
