--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+        <!--AWAITILITY -->
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.2.0</version>
+            <scope>test</scope>
+        </dependency>
         <!--LOMBOK-->
         <dependency>
             <groupId>org.projectlombok</groupId>
