--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
             <version>2.35.0</version>
             <scope>test</scope>
         </dependency>
+        <!--SWAGGER-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
