added SecurityConfig and implemented JWTAuthenticatorFacade, added spring security to pom and added token error handler

--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -8,3 +8,5 @@ jobPosition.not.null= jobPosition {not.null.validation.message}
 jobPosition.not.empty= jobPosition {not.empty.validation.message}
 earnings.not.null= earnings {not.null.validation.message}
 earnings.not.empty= earnings {not.empty.validation.message}
+username.not.blank= username {not.empty.validation.message}
+password.not.blank= password {not.empty.validation.message}
