--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,17 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <!--JWT-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.0.0</version>
+        </dependency>
         <!--TESTS-->
         <dependency>
             <groupId>junit</groupId>
