--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>5.7.5</version>
+            <scope>test</scope>
+        </dependency>
         <!--JWT-->
         <dependency>
             <groupId>com.auth0</groupId>
