--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,24 @@ services:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - "8081:8081"
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+  redis:
+    image: redis
+    ports:
+      - "63792:6379"
+    restart: always
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    restart: always
+    environment:
+      - REDIS_HOSTS=localhost:redis:6379
+    ports:
+      - "8082:8081"
+
+
+
