--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     image: rediscommander/redis-commander:latest
     restart: always
     environment:
-      - REDIS_HOSTS=localhost:redis:6379
+      - REDIS_HOSTS=local:redis:6379
     ports:
       - "8082:8081"
 
